fix:Fix the issue of serializing primitive types in Annotation and BeanSerializer.